force-app/main/default/objects/Test_Scenario__c/Test_Scenario__c.object-meta.xml
<CustomObject>
    <label>Test Scenario</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Test Scenario No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>