force-app/main/default/objects/Test_Scenario__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>Browser from parent Test Scenario</description>
    <formula>TEXT(Test_Script__r.Browser__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Browser from parent Test Scenario</inlineHelpText>
    <label>Browser</label>
    <type>Text</type>
</CustomField>