force-app/main/default/objects/Test_Scenario__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <formula>HYPERLINK(
  &#39;/&#39; &amp; Test_Cycle__r.Environment__c,
  Test_Cycle__r.Environment__r.Name
)</formula>
    <label>Environment</label>
    <type>Text</type>
</CustomField>