force-app/main/default/objects/Test_Scenario__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Test_Cycle__r.Test_Plan__r.Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>