force-app/main/default/objects/Test_Scenario__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <formula>Test_Cycle__r.Release__c</formula>
    <label>Release</label>
    <type>Text</type>
</CustomField>