force-app/main/default/objects/Test_Scenario__c/fields/Runs_Executed__c.field-meta.xml
<CustomField>
    <fullName>Runs_Executed__c</fullName>
    <label>Runs Executed</label>
    <summaryForeignKey>Test_Run__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>