force-app/main/default/objects/Test_Scenario__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <formula>Test_Script__r.Test_Case__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Case</label>
    <type>Text</type>
</CustomField>