force-app/main/default/objects/Test_Scenario__c/fields/Test_Case_No__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_No__c</fullName>
    <formula>Test_Script__r.Test_Case__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Case No.</label>
    <type>Text</type>
</CustomField>