force-app/main/default/objects/Test_Scenario__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <label>Test Cycle</label>
    <referenceTo>Test_Cycle__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>