force-app/main/default/objects/Test_Scenario__c/fields/Test_Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle_Type__c</fullName>
    <formula>TEXT( Test_Cycle__r.Type__c )</formula>
    <label>Test Cycle Type</label>
    <type>Text</type>
</CustomField>