force-app/main/default/objects/Test_Scenario__c/fields/Test_Group__c.field-meta.xml
<CustomField>
    <fullName>Test_Group__c</fullName>
    <formula>HYPERLINK(
  &#39;/&#39; &amp; Test_Script__r.Test_Group__c,
  Test_Script__r.Test_Group__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Group</label>
    <type>Text</type>
</CustomField>