force-app/main/default/objects/Test_Scenario__c/fields/Test_Scenario_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario_Status__c</fullName>
    <formula>TEXT(Test_Script__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Scenario Status</label>
    <type>Text</type>
</CustomField>