force-app/main/default/objects/Test_Scenario__c/fields/Times_Passed__c.field-meta.xml
<CustomField>
    <fullName>Times_Passed__c</fullName>
    <inlineHelpText>How many times was the test run with a &quot;Pass&quot; result?</inlineHelpText>
    <label>Times Passed</label>
    <summaryFilterItems>
        <field>Test_Run__c.Result__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>