force-app/main/default/objects/Test_Scenario__c/listViews/All_Test_Scenario_Versions.listView-meta.xml
<ListView>
    <fullName>All_Test_Scenario_Versions</fullName>
    <columns>NAME</columns>
    <columns>Browser__c</columns>
    <columns>Environment__c</columns>
    <columns>Release__c</columns>
    <columns>Test_Cycle_Type__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Scenario Versions</label>
</ListView>