force-app/main/default/objects/Test_Scenario__c/listViews/Internal_Testing.listView-meta.xml
<ListView>
    <fullName>Internal_Testing</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Scenario_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Cycle_Type__c</field>
        <operation>equals</operation>
        <value>Internal Testing</value>
    </filters>
    <filters>
        <field>Runs_Executed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Internal Testing</label>
</ListView>