force-app/main/default/objects/Test_Scenario__c/listViews/Jacob_s_Tests_to_Validate.listView-meta.xml
<ListView>
    <fullName>Jacob_s_Tests_to_Validate</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Scenario_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Cycle_Type__c</field>
        <operation>equals</operation>
        <value>Test Scenario Validation</value>
    </filters>
    <filters>
        <field>Runs_Executed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Jacob Lim</value>
    </filters>
    <filters>
        <field>Test_Scenario_Status__c</field>
        <operation>equals</operation>
        <value>Ready For Validation,Testing</value>
    </filters>
    <label>Jacob&#39;s Tests to Validate</label>
</ListView>