force-app/main/default/objects/Test_Scenario__c/listViews/Meredith_s_Tests_to_Run.listView-meta.xml
<ListView>
    <fullName>Meredith_s_Tests_to_Run</fullName>
    <columns>Test_Case_No__c</columns>
    <columns>Test_Script__c</columns>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Scenario_Status__c</columns>
    <columns>Test_Cycle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Cycle_Type__c</field>
        <operation>notEqual</operation>
        <value>Test Scenario Validation</value>
    </filters>
    <filters>
        <field>Runs_Executed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Meredith Salget</value>
    </filters>
    <filters>
        <field>Test_Scenario_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready For Validation,Testing</value>
    </filters>
    <label>Meredith&#39;s Tests to Run</label>
</ListView>