force-app/main/default/objects/Test_Scenario__c/listViews/Mike_s_Tests_to_Run.listView-meta.xml
<ListView>
    <fullName>Mike_s_Tests_to_Run</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Scenario_Status__c</columns>
    <columns>Test_Cycle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Mike Lyons</value>
    </filters>
    <filters>
        <field>Runs_Executed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mike&#39;s Tests to Run</label>
</ListView>