force-app/main/default/objects/Test_Scenario__c/listViews/Validated_Tests.listView-meta.xml
<ListView>
    <fullName>Validated_Tests</fullName>
    <columns>NAME</columns>
    <columns>Environment__c</columns>
    <columns>Test_Group__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Browser__c</columns>
    <columns>Test_Scenario_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Scenario_Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </filters>
    <filters>
        <field>Runs_Executed__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Validated Tests</label>
</ListView>